Fixed schedule alignment

--- a/css/style.css
+++ b/css/style.css
@@ -175,17 +175,17 @@ footer {
     color: #24315e;
 }
 
-/* .time {
+.time {
     text-align: left;
     float: left;
-    padding-left: 5px;
+    padding-left: 20px;
 }
 
 .event {
     text-align: right;
     float: right;
-    padding-right: 5px;
-} */
+    padding-right: 20px;
+}
 
 @media (max-width:767px){
     .wide {
